--- a/BaseVideo/src/main/res/layout/device_item.xml
+++ b/BaseVideo/src/main/res/layout/device_item.xml
@@ -1,22 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="200dp"
-    android:layout_height="35dp"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal" android:layout_width="match_parent"
+    android:layout_height="50dp"
     android:gravity="center_vertical"
-    android:background="@drawable/volum_light_back"
-    android:layout_marginTop="20dp"
     android:id="@+id/item">
     <ImageView
-        android:layout_width="25dp"
+        android:layout_width="15dp"
         android:layout_height="25dp"
-        android:layout_marginLeft="15dp"
-        android:src="@drawable/airplay"/>
+        android:layout_marginLeft="20dp"
+        android:layout_centerVertical="true"
+        android:src="@drawable/airplay_device"/>
     <TextView
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="13dp"
-        android:layout_marginLeft="8dp"
+        android:layout_marginLeft="41dp"
+        android:layout_centerVertical="true"
         android:textColor="#FFFFFF"
         android:text="123"></TextView>
-</LinearLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#292A2D"
+        android:layout_marginLeft="41dp"
+        android:layout_alignParentBottom="true"/>
+</RelativeLayout>
