--- a/BaseVideo/src/main/res/layout/video_brightness.xml
+++ b/BaseVideo/src/main/res/layout/video_brightness.xml
@@ -7,14 +7,14 @@
 
     <RelativeLayout
         android:layout_width="222dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_height="36dp"
+        android:layout_marginTop="70dp"
         android:gravity="center">
 
         <LinearLayout
             android:id="@+id/content"
             android:layout_width="222dp"
-            android:layout_height="wrap_content"
+            android:layout_height="36dp"
             android:paddingTop="8dp"
             android:paddingBottom="8dp"
             android:background="@drawable/volum_light_back"
