--- a/BaseVideo/src/main/res/layout/video_hpplay_dialog.xml
+++ b/BaseVideo/src/main/res/layout/video_hpplay_dialog.xml
@@ -2,67 +2,140 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#1D1E20"
+    android:background="#1E1F23"
     android:orientation="vertical">
-    <ImageView
-        android:id="@+id/refresh"
-        android:layout_width="23dp"
-        android:layout_height="23dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginLeft="15dp"
-        android:src="@drawable/refresh"/>
+
     <ImageView
         android:id="@+id/close"
         android:layout_width="23dp"
         android:layout_height="23dp"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="15dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginRight="20dp"
+        android:padding="4.5dp"
+        android:layout_marginTop="50dp"
         android:src="@drawable/close"/>
-    <TextView
-        android:id="@+id/tip"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
-        android:text="搜索设备中"
-        android:textSize="18dp"
-        android:textColor="#ffffff" />
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/device"
-        android:layout_below="@+id/tip"
-        android:layout_width="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
-        android:layout_height="350dp"/>
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:id="@+id/top"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="15dp"
-        android:layout_below="@+id/device">
-        <TextView
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="95dp"
+        android:orientation="vertical">
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20dp"
-            android:textColor="#ffffff"
-            android:text="找不到投屏设备？请检查"/>
+            android:layout_gravity="center_horizontal"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/statue"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="搜索可投屏设备"
+                android:textSize="18dp"
+                android:textColor="#ffffff" />
+            <LinearLayout
+                android:id="@+id/setting"
+                android:visibility="gone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="请检查网络设置"
+                    android:textSize="18dp"
+                    android:textColor="#F06950" />
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/setting_icon"/>
+            </LinearLayout>
+        </LinearLayout>
+        <TextView
+            android:id="@+id/network"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="当前wifi："
+            android:layout_marginTop="12dp"
+            android:layout_gravity="center_horizontal"
+            android:textSize="13dp"
+            android:textColor="#848891" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="已找到的设备列表："
+                android:layout_centerVertical="true"
+                android:layout_marginTop="12dp"
+                android:textSize="13dp"
+                android:textColor="#848891" />
+            <ImageView
+                android:id="@+id/refresh"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_alignParentRight="true"
+                android:src="@drawable/refresh"/>
+        </RelativeLayout>
+    </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/device"
+        android:layout_below="@+id/top"
+        android:layout_width="match_parent"
+        android:layout_marginTop="20dp"
+        android:layout_above="@+id/bottom"
+        android:layout_height="match_parent"/>
+    <TextView
+        android:id="@+id/null_back"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="暂未找到可投屏设备"
+        android:layout_below="@+id/top"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:textSize="13dp"
+        android:textColor="#848891" />
+    <LinearLayout
+        android:id="@+id/bottom"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="139dp"
+        android:orientation="vertical"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:gravity="center_vertical"
+        android:layout_marginBottom="34dp"
+        android:paddingLeft="31dp"
+        android:background="@drawable/airplay_tip_back"
+        android:layout_alignParentBottom="true">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16dp"
-            android:layout_marginTop="10dp"
             android:textColor="#ffffff"
-            android:alpha="0.7"
+            android:text="找不到投屏设备？请检查："/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="13dp"
+            android:layout_marginTop="10dp"
+            android:textColor="#848891"
             android:text="1.该设备和手机是否连接同一个网络"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16dp"
-            android:textColor="#ffffff"
+            android:textSize="13dp"
+            android:textColor="#848891"
             android:layout_marginTop="10dp"
-            android:alpha="0.7"
             android:text="2.该设备是否支持投屏"/>
     </LinearLayout>
 </RelativeLayout>
