--- a/BaseVideo/src/main/res/layout/video_progress_dialog.xml
+++ b/BaseVideo/src/main/res/layout/video_progress_dialog.xml
@@ -6,8 +6,8 @@
     android:orientation="vertical">
 
     <RelativeLayout
-        android:layout_width="152dp"
-        android:layout_height="152dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:gravity="center">
 
         <LinearLayout
