--- a/BaseVideo/src/main/res/values/style.xml
+++ b/BaseVideo/src/main/res/values/style.xml
@@ -8,7 +8,12 @@
         <item name="android:windowAnimationStyle">@style/video_popup_toast_anim</item>
         <item name="android:backgroundDimEnabled">false</item>
     </style>
-
+    <style name="hpplay_style_dialog_progress" parent="@android:style/Theme.Dialog">
+        <item name="android:windowBackground">#1E1F23</item>
+        <item name="android:windowNoTitle">true</item>
+<!--        <item name="android:windowAnimationStyle">@style/video_popup_toast_anim</item>-->
+<!--        <item name="android:backgroundDimEnabled">false</item>-->
+    </style>
     <style name="video_popup_toast_anim" parent="@android:style/Animation">
         <item name="android:windowEnterAnimation">@android:anim/fade_in</item>
         <item name="android:windowExitAnimation">@android:anim/fade_out</item>
